Fix layout bug with 2 new cost & days fields

--- a/public/stylesheets/sass/backlog.scss
+++ b/public/stylesheets/sass/backlog.scss
@@ -58,8 +58,8 @@ table#themes-header {
   th.comments { width: 22%; }
   th.score-50 { width: 3%; }
   th.score-90 { width: 3%; }
-  th.cost { width: 6%; }
-  th.days { width: 3%; }
+  th.cost-formatted { width: 6%; }
+  th.days-formatted { width: 3%; }
 }
 
 ul.themes {;
